<resources>
    <string name="app_name">In My Garden</string>
    <!--    Button Texts    -->
    <string name="goals_button">Goals: %1$s/%2$s</string>
    <string name="garden_button">Garden</string>
    <!--    Content Descriptions    -->
    <string name="flower_image">flower</string>
    <string name="checklist_image">checklist</string>
    <!--    Checklist Items    -->
    <string name="checklist1">Water</string>
    <string name="checklist2">Sun</string>
    <string name="checklist3">Food</string>
    <!--    Dialog text for growth completion    -->
    <string name="congrats_title">Congratulations!</string>
    <string name="congrats_text">
        Go to the garden to view your fully grown flower!\n
        Great job meeting your goals!
    </string>

    <!--    Shared Preferences Strings for data in view models    -->
    <string name="days_grown">daysGrown</string>
    <string name="last_day_grown">lastDayGrown</string>
    <string name="daily_complete">dailyComplete</string>
    <string name="daily_total">dailyTotal</string>
    <string name="last_login_date">lastLoginDate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- all the things for the goal screen -->
    <string name="manage_goals">MANAGE GOALS</string>
    <string name="goals_top_string">ADD GOALS</string>
    <string name="steps_string">STEPS</string>
    <string name="water_string">WATER</string>
    <string name="sleep_string">SLEEP</string>
    <string name="home_string">HOME</string>
    <string name="progress_string">Progress</string>
    <string name="goal_string">Goal</string>
    <string name="custom_goal">CUSTOM</string>
    <string name="oz">Some unit</string>
    <string name="hr">Hours</string>
    <string name="step">Steps</string>
    <string name="cus">Custom Goal</string>
    <string name="button_add">Add</string>
    <string name="button_goals" >Manage Goals</string>
    <string name="complete">Complete</string>
    <string name="delete">Delete</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="Back">Back</string>
    <string name="delete_all">Reset All</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>


</resources>