<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Steps"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/editTextTextPersonName8"
        android:layout_width="91dp"
        android:layout_height="23dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/progress_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.334"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.596" />

    <EditText
        android:id="@+id/editTextTextPersonName9"
        android:layout_width="91dp"
        android:layout_height="23dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/goal_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.678"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.596" />

    <EditText
        android:id="@+id/editTextTextPersonName7"
        android:layout_width="91dp"
        android:layout_height="23dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/progress_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.678"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.413" />

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="91dp"
        android:layout_height="23dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/goal_string"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.334"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goals"
        app:layout_constraintVertical_bias="0.669" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="91dp"
        android:layout_height="23dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/progress_string"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toEndOf="@+id/water"
        app:layout_constraintTop_toBottomOf="@+id/goals"
        app:layout_constraintVertical_bias="0.522" />

    <TextView
        android:id="@+id/goals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/goals_top_string"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="#FFC107"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/water"
        android:layout_width="49dp"
        android:layout_height="25dp"
        android:text="@string/water_string"
        android:textColor="#FF9800"
        app:layout_constraintBottom_toTopOf="@+id/steps"
        app:layout_constraintEnd_toStartOf="@+id/goals"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/goals" />

    <TextView
        android:id="@+id/steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/steps_string"
        android:textColor="#FF9800"
        app:layout_constraintBottom_toTopOf="@+id/sleep"
        app:layout_constraintEnd_toStartOf="@+id/goals"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goals"
        app:layout_constraintVertical_bias="0.665" />

    <TextView
        android:id="@+id/sleep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sleep_string"
        android:textColor="#FF9800"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/steps"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="@+id/steps"
        app:layout_constraintTop_toBottomOf="@+id/goals"
        app:layout_constraintVertical_bias="0.667" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goals"
        app:layout_constraintVertical_bias="0.878" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="106dp"
        android:layout_height="42dp"
        android:ems="10"
        android:hint="@string/progress_string"
        android:inputType="textPersonName"
        android:text="@string/goal_string"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName6"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName5"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toEndOf="@+id/water"
        app:layout_constraintTop_toBottomOf="@+id/goals"
        app:layout_constraintVertical_bias="0.43" />


</androidx.constraintlayout.widget.ConstraintLayout>