<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="horizontal"
    android:padding="10dp"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/flower_frame"
        android:layout_width="300dp"
        android:layout_height="500dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--    Pot   -->
        <ImageView
            android:id="@+id/pot_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="0dp"
            android:contentDescription="image"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/pot_image" />

        <!--    Flower in pot   -->
        <ImageView
            android:id="@+id/flower"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="0dp"
            android:contentDescription="@string/flower_image"
            android:scaleType="centerInside"
            android:src="@drawable/flower1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </FrameLayout>

    <!--    Frame Layout for checklist views -->
    <FrameLayout
        android:id="@+id/checklist_frame"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!--    Checklist Rectangle   -->
        <ImageView
            android:id="@+id/checklist_image"
            android:layout_width="@dimen/checklist_image_size"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:contentDescription="@string/checklist_image"
            android:src="@drawable/checklist_image" />

        <!--    Checklist Items   -->
        <TextView
            android:id="@+id/water_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/checklist1"
            android:textSize="@dimen/checkbox_size" />

        <TextView
            android:id="@+id/sun_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="4dp"
            android:text="@string/checklist2"
            android:textSize="@dimen/checkbox_size" />

        <TextView
            android:id="@+id/food_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="4dp"
            android:text="@string/checklist3"
            android:textSize="@dimen/checkbox_size" />

        <!--    Check Boxes (in order top to bottom)  -->
        <ImageView
            android:id="@+id/water_checkbox"
            android:layout_width="@dimen/checkbox_size"
            android:layout_height="@dimen/checkbox_size"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/checklist_image"
            android:src="@drawable/checkbox_empty" />

        <ImageView
            android:id="@+id/sun_checkbox"
            android:layout_width="@dimen/checkbox_size"
            android:layout_height="@dimen/checkbox_size"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="-30dp"
            android:layout_marginTop="34dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/checklist_image"
            android:src="@drawable/checkbox_empty" />

        <ImageView
            android:id="@+id/food_checkbox"
            android:layout_width="@dimen/checkbox_size"
            android:layout_height="@dimen/checkbox_size"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="64dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/checklist_image"
            android:src="@drawable/checkbox_empty" />
    </FrameLayout>

    <Button
        android:id="@+id/goals_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:text="@string/goals_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"></Button>

    <Button
        android:id="@+id/garden_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/garden_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"></Button>

    <Button
        android:id="@+id/test_goals_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Complete Goal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"></Button>

    <Button
        android:id="@+id/test_days_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="Day Complete"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"></Button>

    <Button
        android:id="@+id/reminder_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Set Reminder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/garden_button" />


</androidx.constraintlayout.widget.ConstraintLayout>